--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -138,4 +138,13 @@
 }
 
 
-
+.alert {
+  color: #721c24;
+  text-align: center;
+  width: 50%;
+  padding: 1rem;
+  border: 1px solid #f5c6cb;
+  border-radius: 5px;
+  background:#f8d7da;
+  margin-bottom: 1rem;
+}
