--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -6,12 +6,12 @@
       .container {
         .header-content {
           h1 {
-            font-size: 6rem;
+            font-size: 4.5rem;
           }
 
           p {
             line-height: 1.7;
-            font-size: 2rem;
+            font-size: 1.5rem;
           }
 
           .btn {
@@ -62,6 +62,55 @@
             &-main{
               padding: 1rem 2rem;
               font-size: 14px;
+            }
+          }
+        }
+      }
+    }
+  }
+  // Work
+  // Section A: Work
+  #work {
+    &-a {
+      .container {
+        .items-grid {
+          .item {
+            &:after {
+              content: '';
+              width: 0;
+              height: 0;
+            }
+            &:hover:after {
+              opacity: 0;
+            }
+
+            &:hover img {
+              transform: none;
+            }
+
+            &-icon {
+              top: 0;
+              left: 0;
+              width: 100%;
+              height: 100%;
+              a {
+                display: block;
+                opacity: 1;
+                top: 0;
+                left: 0;
+                visibility: visible;
+                width: 100%;
+                height: 100%;
+                
+                i {
+                  color: $main-color;
+                  visibility: hidden;
+                }
+              }
+
+              a:hover i {
+                transform: none;
+              }
             }
           }
         }
@@ -160,14 +209,22 @@
             }
 
             &-icon {
-              top: 20px;
-              right: 40px;
+              top: 0;
+              left: 0;
+              width: 100%;
+              height: 100%;
               a {
+                display: block;
                 opacity: 1;
+                top: 0;
+                left: 0;
                 visibility: visible;
+                width: 100%;
+                height: 100%;
                 
                 i {
                   color: $main-color;
+                  visibility: hidden;
                 }
               }
 
@@ -337,7 +394,7 @@
     &-a {
       .container {
         .items-grid {
-          grid-template-columns: repeat(1, 1fr);
+          grid-template-columns: repeat(2, 1fr);
           .item {
             &:after {
               content: '';
@@ -350,14 +407,22 @@
             }
 
             &-icon {
-              top: 20px;
-              right: 40px;
+              top: 0;
+              left: 0;
+              width: 100%;
+              height: 100%;
               a {
+                display: block;
                 opacity: 1;
+                top: 0;
+                left: 0;
                 visibility: visible;
+                width: 100%;
+                height: 100%;
                 
                 i {
                   color: $main-color;
+                  visibility: hidden;
                 }
               }
 
@@ -375,12 +440,34 @@
     &-a {
       .container {
         .items-flex {
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          .card {
+            width: 90%;
+          }
+
           .contact-info {
+            width: 100%; 
+            margin-top: 10%;
+
             .center {
               padding: 2.5rem;
               font-size: 16px;
             }
           }
+        }
+      }
+    }
+  }
+
+  // Footer
+#footer {
+    &-main{
+      .container { 
+        padding: 0.7rem;
+        p {
+          padding: 0.2rem;
         }
       }
     }
