--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -454,6 +454,9 @@
             .center {
               padding: 2.5rem;
               font-size: 16px;
+              justify-content: center;
+              align-items: center;
+              width: 90%;
             }
           }
         }
@@ -468,6 +471,7 @@
         padding: 0.7rem;
         p {
           padding: 0.2rem;
+          font-size: 14px;
         }
       }
     }
