--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -330,11 +330,13 @@
   // Contact
   #contact {
     &-a {
-      .items-flex {
-        .contact-info {
-          .center {
-            padding: 1.29rem !important;
-            font-size: 16px !important;
+      .container {
+        .items-flex {
+          .contact-info {
+            .center {
+              padding: 1.29rem !important;
+              font-size: 16px !important;
+            }
           }
         }
       }
@@ -343,7 +345,7 @@
 }
 
 // Landscape
-@media(max-height: 580px) {
+@media(max-height: 560px) {
   .section-title {
     font-size: 40px;
   }
