--- a/scss/main.scss
+++ b/scss/main.scss
@@ -248,9 +248,12 @@ img {
         }
 
         &-img {
+          height: 100%;
+
             img {
               transition: all 1.5s ease;
               display: block;
+              height: 100%;
             }
         }
 
