--- a/scss/main.scss
+++ b/scss/main.scss
@@ -328,6 +328,7 @@ img {
               border-radius: 5px;
               outline: none;
               font-size: 16px;
+font-family: 'Roboto', sans-serif;
 
               &:hover {
                 border: $secondary-color 1px solid;
