--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -112,7 +112,14 @@
     
     &:active {
       outline: none;
+      background: #222 !important;
+      font-size: 12px;
       box-shadow: 0 1px 5px #000 inset, 0 1px 0 #444;
+    }
+
+    &:focus {
+      outline: none;
+      background: rgb(43, 43, 43);
     }
   }
 }
@@ -147,4 +154,10 @@
   border-radius: 5px;
   background:#f8d7da;
   margin-bottom: 1rem;
+}
+
+
+a.nav-color {
+  background-size: 100% 2px !important;
+  background-position: 0% 100% !important;
 }
