--- a/scss/main.scss
+++ b/scss/main.scss
@@ -304,22 +304,19 @@ img {
     .items-flex {
       display: flex;
       justify-content: space-between;
-      // align-items: center;
 
       .card {
         width: 50%;
         color: $light-color;
-        // padding-right: 1rem;
 
         #form-main {
           .text-fields{
             display: flex;
             flex-direction: column;
-            // padding: 1rem;
 
             .text-input {
               border: none;
-              border: #000 1px solid;
+              border: rgba(0, 0, 0, 0) 1px solid;
               box-shadow: 0 1px 5px #000 inset, 0 1px 0 #444;
               background: #1a1a1a;
               color: $secondary-color;
