redesigned works section

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -2,5 +2,5 @@
 $website-width: 1200px;
 $dark-color: #212427;
 $light-color: #f4f4f4;
-$main-color: rgb(4, 171, 236);
+$main-color: #04abec;
 $secondary-color: #1592ad;
