--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -5,8 +5,6 @@
   overflow: hidden;
 }
 
-
-
 // Padding
 .py {
   &-1 {
@@ -50,20 +48,20 @@
 // Buttons
 // Showcase-btn
 .btn {
-  &-main{
+  &-main {
     display: inline-block;
     border: none;
     transition: all 700ms ease-in-out;
     padding: 1rem 2rem;
     position: relative;
-    border: 1.5px solid $secondary-color;
+    border: 1px solid $secondary-color;
     text-align: center;
     text-transform: uppercase;
     overflow: hidden;
     color: #fff;
 
     &:after {
-      content: '';
+      content: "";
       position: absolute;
       width: 0%;
       height: 100%;
@@ -78,15 +76,15 @@
     &:hover {
       color: $dark-color;
       font-weight: bold;
-      
-       &:after {
-         content: '';
-         position: absolute;
-         width: 100%;
-         height: 100%;
-         transform: scale(3) translateX(0) translateY(0) rotate(-45deg);
-         background: $secondary-color;
-        }
+
+      &:after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        transform: scale(3) translateX(0) translateY(0) rotate(-45deg);
+        background: $secondary-color;
+      }
     }
   }
 
@@ -109,7 +107,7 @@
       background: rgb(43, 43, 43);
       cursor: pointer;
     }
-    
+
     &:active {
       outline: none;
       background: #222 !important;
@@ -141,9 +139,7 @@
 // Complete progress bar
 .complete {
   background: #1592ad !important;
-  
 }
-
 
 .alert {
   color: #721c24;
@@ -152,10 +148,9 @@
   padding: 1rem;
   border: 1px solid #f5c6cb;
   border-radius: 5px;
-  background:#f8d7da;
+  background: #f8d7da;
   margin-bottom: 1rem;
 }
-
 
 a.nav-color {
   background-size: 100% 2px !important;
