--- a/scss/main.scss
+++ b/scss/main.scss
@@ -80,6 +80,10 @@ img {
         font-size: 16px;
         text-transform: uppercase;
 
+        &:last-child {
+          padding: 0 0 0 1.5rem;
+        }
+
         a {
           text-decoration: none;
           padding-bottom: 2px;
@@ -238,6 +242,7 @@ img {
         &:hover p {
           font-size: 2rem;
           border: 6px solid $light-color;
+          background: #fdfdfd31;
         }
 
         &-img {
@@ -255,10 +260,9 @@ img {
               padding: 5px 10px;
               font-size: 0;
               color: $light-color;
-              background: #fdfdfd31;
               border: 0 solid $light-color;
               border-radius: 5px;
-              transition: font-size 0.5s, border 0.5s;
+              transition: background 0.5s, font-size 0.5s, border 0.5s;
               z-index: 1;
             }
 
@@ -334,7 +338,6 @@ img {
       }
 
       .contact-info {
-        width: 50%;
         display: flex;
         justify-content: center;
         align-items: center;
