--- a/scss/main.scss
+++ b/scss/main.scss
@@ -122,7 +122,7 @@ img {
     align-items: center;
     width: 100%;
     height: 100vh;
-    background: url("../img/showcase_test_4.jpg") no-repeat 30% 30% / cover;
+    background: url("../img/showcase_test_4.jpg") no-repeat center center / cover;
 
     .header-content {
       text-align: center;
